Sforce8 Project Data/src/objects/Paymentslip__c.object
<CustomObject>
    <fields>
        <fullName>Pamount__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pitem__c</fullName>
        <label>摘要</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pkamoku__c</fullName>
        <label>科目</label>
        <picklist>
            <picklistValues>
                <fullName>交通費</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>雑費</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ケーキ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>マッサージ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pperson__c</fullName>
        <label>扱者</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipName>PaymentC3TD</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relpayment__c</fullName>
        <label>予約会計</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipName>PaymentYOMV</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>出金</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Payment#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>